fix: align text

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -443,8 +443,8 @@ html {
 }
 
 .circle:hover {
-  background: #FDDCC4;
-  border: 2px solid #FDDCC4;
+  background: #fddcc4;
+  border: 2px solid #fddcc4;
   transition: 0.3s;
 }
 
@@ -454,4 +454,8 @@ html {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+.section-pets__title {
+  width: 400px;
+  text-align: center;
 }
